# file-observatory

./: .gitignore  README.md  pom.xml
batchlite/: pom.xml
commoncrawl-fetcher/: pom.xml
commoncrawl-fetcher/src/: README.txt
corpus-packager/: README.md  pom.xml
ingest/: pom.xml
ingest-jdbc/: pom.xml
pdf-utils/: pom.xml
simple-ingester/: pom.xml
tika-addons/: pom.xml
tika-addons/tika-eval-multicomparer/: pom.xml
tika-addons/tika-pipes-reporter/: pom.xml
tika-addons/tika-server-fuzzer/: pom.xml
tika-containers/: pom.xml
tika-containers/tika-arlington/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-exiftool/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-pdfchecker/: Dockerfile  pom.xml
tika-containers/tika-pdfium/: my-args.gn
tika-containers/tika-pdfjs/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-pdfjs-selenium/: pom.xml
tika-containers/tika-pdfspelunker/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-pdftotext/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-pipes-pdfinfo/: Dockerfile  log4j2.xml  my-tika-config.xml  pipes-log4j2.xml  pom.xml
tika-containers/tika-pipes-siegfried/: Dockerfile  my-tika-config.xml  pom.xml
tika-containers/tika-pypdf2/: Dockerfile  my-tika-config.xml  pom.xml
tika-wrapper-example/: pom.xml
tika-wrappers/: README.txt  pom.xml
tool-runners/: env.properties  pom.xml
tool-runners/arlington/: Dockerfile  env.properties  pom.xml
tool-runners/caradoc/: Dockerfile  env.properties  pom.xml
utils-general/: pom.xml
(+302 files in other folders)
